boardgamejock/assets/static/style.css
body {
    margin: 50px;
    font-family: 'Zilla Slab', cursive;
}

.body-content {
    width: 1060px;
    margin: auto;
}

header {
    height: 4.5rem;
}

header, footer {
    background: #daeef3;
    padding: 20px 20px;
}

/* Logo Image */
.logo img {
    width: 4rem;
    height: 4rem;
    float: left;
    margin-right: 20px;
}

/*Main site title*/
.site-title {
    color: #169bbd;
    font-size: 30px;
}

/*Per-page title.*/
.page-title, .sidebar-title {
    font-size: 32px;
    font-weight: bold;
}

.sidebar-title {
    text-align: center;
    margin: auto;
    padding-bottom: 10px;
}

div.content-and-sidebar {
    background: #f1fbfe;
    border: 2px solid black;
    display: flex;
    flex: 1 1 auto;
    min-height: 500px;
}

/* Main page content. */
div.page-content {
    width: 70%;
    padding: 20px;
}

/* Recent games sidebar. */
div.right-sidebar {
    width: 30%;
    outline: 2px solid black;
    overflow-y: scroll;
    display: flex;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
}

#recent-games {
    background: #f1fbfe;
    margin: auto;
    text-align: center;
}

.recent-games-entry {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 2px solid black;
}

.recent-games-entry-title {
    font-weight: bold;
    font-size: 14pt;
}

.recent-games-entry-date {
    font-weight: bold;
}

.recent-games-entry img {
    padding: 15px;
}

@keyframes pulse {
    0% {
        background-color: rgba(165, 165, 165, 0.1)
    }
    50% {
        background-color: rgba(165, 165, 165, 0.3)
    }
    100% {
        background-color: rgba(165, 165, 165, 0.1)
    }
}

.recent-games-entry-loading-line {
    height: 20px;
    margin: 10px;
    animation: pulse 1s infinite ease-in-out;
}

.recent-games-entry-loading-picture {
    height: 100px;
    margin: 20px;
    animation: pulse 1s infinite ease-in-out;
}

/* Paragraphs inside the main page. */
div.page-content p {
    font-size: 12.5pt;
    line-height: 1.6;
    text-align: justify;
}

/* Images inside of page bodies.*/
div.page-content img {
    max-width: 35%;
    margin-right: 25px;
    display: block;
}

.navbar-item {
    display: inline;
    margin: 0 8px 0 0;
    padding 0;
    font-size: 1.4rem;
}

.active {
    font-weight: bold;
}

.pagination {
    clear: both;
    padding-top: 20px;
}

.blog-post {
    margin-bottom: 20px;
    clear: both;
}

a {
    color: #2a99b6;
    text-decoration: none;
}

a:hover {
    color: #33bbdf;
}

